# TypeChain

./: .gitignore  CHANGELOG.md  README.md  minichain.cabal  typechain.cabal
app/: DotEnv.hs  Main.hs
app/Minichain/ChatModels/: OpenAI.hs  Types.hs
app/TypeChain/: ChatModels.hs
app/TypeChain/ChatModels/: OpenAI.hs  PromptTemplate.hs  Prompts.hs  Types.hs
docs/: Minichain-ChatModels-OpenAI.html  Minichain-ChatModels-Types.html  TypeChain-ChatModels-OpenAI.html  TypeChain-ChatModels-PromptTemplate.html  TypeChain-ChatModels-Types.html  TypeChain-ChatModels.html  doc-index.html  index.html  minichain.haddock  typechain.haddock
docs/src/: Minichain.ChatModels.OpenAI.html  Minichain.ChatModels.Types.html  TypeChain.ChatModels.OpenAI.html  TypeChain.ChatModels.PromptTemplate.html  TypeChain.ChatModels.Types.html  TypeChain.ChatModels.html
typechain-examples/: typechain-examples.cabal
typechain-examples/app/SimplePrediction/: Main.hs
