cabal-version:      2.4
name:               typechain
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Archaversine
maintainer:         adam.brohl.w@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable typechain-exe
    main-is:          Main.hs
    other-modules:    DotEnv
                      TypeChain.ChatModels
                      TypeChain.ChatModels.Types
                      TypeChain.ChatModels.PromptTemplate
                      TypeChain.ChatModels.OpenAI


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, aeson, unordered-containers, bytestring, http-conduit, exceptions, mtl, lens, template-haskell, split
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wunused-binds

library 
    exposed-modules:  TypeChain.ChatModels 
                      TypeChain.ChatModels.Types
                      TypeChain.ChatModels.OpenAI
                      TypeChain.ChatModels.PromptTemplate
    build-depends:    base ^>=4.17.2.0, aeson, unordered-containers, bytestring, http-conduit, exceptions, mtl, lens, template-haskell
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wunused-binds
    
