cabal-version:      2.4
name:               typechain
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Archaversine
maintainer:         adam.brohl.w@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable typechain-exe
    main-is:          Main.hs
    other-modules:    DotEnv
                      TypeChain.ChatModels
                      TypeChain.ChatModels.Types
                      TypeChain.ChatModels.PromptTemplate
                      TypeChain.ChatModels.OpenAI


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base                  ^>=4.17.2.0, 
                      aeson                 >= 2.2.1 && < 2.3,
                      template-haskell      >= 2.19.0 && < 2.20,
                      bytestring            >= 0.11.5 && < 0.12,
                      mtl                   >= 2.2.2 && < 2.3,
                      exceptions            >= 0.10.5 && < 0.11,
                      unordered-containers  >= 0.2.20 && < 0.3,
                      http-conduit          >= 2.3.8 && < 2.4,
                      split                 >= 0.2.5 && < 0.3,
                      lens                  >= 5.2.3 && < 5.3
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wunused-binds

library 
    exposed-modules:  TypeChain.ChatModels 
                      TypeChain.ChatModels.Types
                      TypeChain.ChatModels.OpenAI
                      TypeChain.ChatModels.PromptTemplate
    build-depends:    base                  ^>=4.17.2.0, 
                      aeson                 >= 2.2.1 && < 2.3,
                      template-haskell      >= 2.19.0 && < 2.20,
                      bytestring            >= 0.11.5 && < 0.12,
                      mtl                   >= 2.2.2 && < 2.3,
                      exceptions            >= 0.10.5 && < 0.11,
                      unordered-containers  >= 0.2.20 && < 0.3,
                      http-conduit          >= 2.3.8 && < 2.4,
                      lens                  >= 5.2.3 && < 5.3
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wunused-binds
    
