cabal-version:      2.4
name:               typechain-examples
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Archaversine
maintainer:         adam.brohl.w@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

source-repository head
    type: git
    location: git://github.com/archaversine/typechain.git
    subdir: typechain-examples

executable typechain-simple-prediction
    main-is:          SimplePrediction/Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.18.1.0, typechain
    hs-source-dirs:   app
    default-language: Haskell2010
